<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".detail.DetailMovieActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_back"
                app:title="Detail Movie"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_detail_movie"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout_detail" />

        <TextView
            android:id="@+id/tv_detail_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie" />


        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_share"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toStartOf="@+id/btn_trailer"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title_movie" />

        <TextView
            android:id="@+id/tv_raiting_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_title"
            android:padding="10dp"
            android:text="@string/raiting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_movie"
            app:layout_constraintTop_toBottomOf="@id/btn_share" />

        <TextView
            android:id="@+id/tv_raiting_value_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/bg_value"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/raiting_value"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_raiting_title"
            app:layout_constraintStart_toStartOf="@+id/tv_raiting_title"
            app:layout_constraintTop_toBottomOf="@id/tv_raiting_title" />

        <TextView
            android:id="@+id/tv_year_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_title"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/year"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_raiting_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_share" />

        <TextView
            android:id="@+id/tv_year_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_value"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/year_value"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_year_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_year_title" />


        <TextView
            android:id="@+id/tv_genre_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_title"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/genre"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_raiting_value_movie" />


        <TextView
            android:id="@+id/tv_genre_movie_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_value"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/genre"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_genre_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_genre_movie" />

        <TextView
            android:id="@+id/tv_duration_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_title"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/duration"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_genre_movie_value" />


        <TextView
            android:id="@+id/tv_duration_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/bg_value"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/duration_value"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_duration_movie"
            app:layout_constraintStart_toStartOf="@+id/tv_genre_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_duration_movie" />

        <TextView
            android:id="@+id/tv_sinopsis_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_title"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sinposis_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_duration_value" />

        <TextView
            android:id="@+id/keteranganMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_value"
            android:padding="10dp"
            android:text="@string/sinposis_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sinopsis_movie" />

        <ImageButton
            android:id="@+id/btn_trailer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_play"
            android:src="@drawable/ic_baseline_play_arrow_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_movie" />


        <ToggleButton
            android:id="@+id/iv_favorite"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/choose_favorit"
            android:textOn=""
            android:textOff=""
            app:layout_constraintBottom_toBottomOf="@+id/btn_trailer"
            app:layout_constraintStart_toEndOf="@+id/btn_trailer"
            app:layout_constraintTop_toTopOf="@+id/btn_trailer" />

        <ProgressBar
            android:id="@+id/progress_bar_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.255" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
